--- a/index.html
+++ b/index.html
@@ -4,91 +4,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ｓｏｌａｒｐｕｎｋｉｅ　♡</title>
+    <title>ｓｏｌａｒｐｕｎｋ ♡</title>
     <link rel="icon" type="image/x-icon" href="icon.com">
     <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div id="radio">Radio</div>
-    <div id="all">
-        
-        <div id="angel">
-            <img alt="" src="assets/ochan.jpeg">
-        </div>
-        <h1>ｓｏｌａｒｐｕｎｋｉｅ　♡</h1>
-        <h5>🌱 INFJ</h5>
-        <div class="social-links">
-            <div class="social-links-st">
-                <div class="flex">
-                    <a target="_blank" rel="noopener" title="Email" data-testid="SocialIcon"
-                        href="mailto:solarpunkie@email.com" aria-label="Email"
-                        class="sc-eCssSg lbrsth sc-hBEYos dWjUC">
-                        <svg enable-background="new 0 0 24 24"
-                            viewBox="0 0 24 24" class="sc-gKsewC fwXqBO">
-                            <title data-testid="svgTitle" id="title_0.6133930912992829">
-                                Email
-                            </title>
+    <iframe id="sc-widget" width="100%" height="75px" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1834428894&color=%23000000&auto_play=false&hide_related=false&show_comments=false&show_user=true&show_reposts=false&show_teaser=false&visual=true">
+    </iframe>
+    
+    <main>
+        <div id="all">
+            <div id="angel-name-mbti">
+                <img alt="" src="assets/ochan.jpeg">
+                <h3>
+                    ＠ｓｏｌａｒｐｕｎｋ　♡</h3>
+                <p>🌱 INFJ ~ IEI
+                </p>
+            </div>
+            <div id="social-links">
+                <div class="social-links-icon">
+                    <a target="_blank" rel="noopener" title="Email" href="mailto:solarpunks2@email.com"
+                        aria-label="Email">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4 7.00005L10.2 11.65C11.2667 12.45 12.7333 12.45 13.8 11.65L20 7" stroke="#000000"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                             <path
-                                d="M18.821,20.5H5.179A3.683,3.683,0,0,1,1.5,16.821V7.179A3.683,3.683,0,0,1,5.179,3.5H18.821A3.683,3.683,0,0,1,22.5,7.179v9.642A3.683,3.683,0,0,1,18.821,20.5ZM5.179,4.5A2.682,2.682,0,0,0,2.5,7.179v9.642A2.682,2.682,0,0,0,5.179,19.5H18.821A2.682,2.682,0,0,0,21.5,16.821V7.179A2.682,2.682,0,0,0,18.821,4.5Z">
-                            </path>
+                                d="M12 19H5C3.89543 19 3 18.1046 3 17V7C3 5.89543 3.89543 5 5 5H19C20.1046 5 21 5.89543 21 7V11"
+                                stroke="#000000" stroke-width="2" stroke-linecap="round" />
                             <path
-                                d="M12,14.209a.5.5,0,0,1-.346-.138L4.286,7.028a.5.5,0,0,1,.691-.723L12,13.018l7.023-6.713a.5.5,0,1,1,.691.723l-7.368,7.043A.5.5,0,0,1,12,14.209Z">
-                            </path>
-                            <path
-                                d="M4.7,17.833a.5.5,0,0,1-.347-.86l5.54-5.31a.5.5,0,0,1,.692.722L5.048,17.694A.5.5,0,0,1,4.7,17.833Z">
-                            </path>
-                            <path
-                                d="M19.3,17.832a.5.5,0,0,1-.346-.139l-5.538-5.308a.5.5,0,0,1,.692-.722l5.538,5.308a.5.5,0,0,1-.346.861Z">
-                            </path>
+                                d="M15.5147 14.5147C14.8284 15.201 14.8284 16.3137 15.5147 17L18 19.4853L20.4853 17.0001C21.1716 16.3138 21.1716 15.2011 20.4853 14.5148C19.799 13.8285 18.6863 13.8285 18 14.5147C17.3138 13.8285 16.201 13.8284 15.5147 14.5147Z"
+                                stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </a>
                 </div>
-                <div class="social-links-st">
-                    <a target="_blank" rel="noopener" title="SoundCloud" data-testid="SocialIcon"
-                        href="https://soundcloud.com/solarpunkie" aria-label="SoundCloud"
-                        class="sc-eCssSg lbrsth sc-hBEYos dWjUC">
-                        <svg enable-background="new 0 0 24 24"
-                            viewBox="0 0 24 24" class="sc-gKsewC fwXqBO">
-                            <title data-testid="svgTitle" id="title_0.7676637646339248">
-                                SoundCloud
-                            </title>
+                <div class="social-links-icon">
+                    <a target="_blank" rel="noopener" title="Skoob" href="https://www.skoob.com.br/perfil/solarpunks2"
+                        aria-label="Skoob">
+                        <svg role="img" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 14 14">
                             <path
-                                d="M19.119,19.071H9.262a.5.5,0,0,1,0-1h9.857a3.881,3.881,0,1,0,0-7.761,1.084,1.084,0,0,0-.161.016l-.165.019a.482.482,0,0,1-.515-.334A6.055,6.055,0,0,0,9.513,6.748a.5.5,0,0,1-.5-.866A7.056,7.056,0,0,1,19.082,9.31h.037a4.881,4.881,0,1,1,0,9.761Z">
-                            </path>
-                            <path d="M.5,17.429a.5.5,0,0,1-.5-.5V10.357a.5.5,0,0,1,1,0v6.572A.5.5,0,0,1,.5,17.429Z">
-                            </path>
-                            <path
-                                d="M3.238,19.071a.5.5,0,0,1-.5-.5V7.619a.5.5,0,0,1,1,0V18.571A.5.5,0,0,1,3.238,19.071Z">
-                            </path>
-                            <path
-                                d="M5.977,19.071a.5.5,0,0,1-.5-.5V8.714a.5.5,0,0,1,1,0v9.857A.5.5,0,0,1,5.977,19.071Z">
-                            </path>
+                                d="m 6.828566,12.87963 c -0.199457,-0.2416 -0.797513,-0.4428 -1.516744,-0.5103 -1.101312,-0.1033 -1.622995,-0.4602 -1.863859,-1.2752 -0.08355,-0.2827 -0.164594,-0.3792 -0.430887,-0.513 -0.78373,-0.3938 -0.93231,-0.7119005 -0.93231,-1.9961005 0,-0.5336 0.01903,-0.9702 0.0423,-0.9702 0.02327,0 0.290892,0.1252 0.594727,0.2783 0.303834,0.1529 0.574879,0.2557 0.60232,0.2283 0.02744,-0.027 0.04896,-0.1617 0.04782,-0.2984 -0.0016,-0.1899 -0.09582,-0.3404 -0.399806,-0.6384 -0.935681,-0.9175 -0.990822,-2.475 -0.123967,-3.5018 l 0.224362,-0.2657 -0.166202,-0.1775 c -0.09141,-0.097 -0.204878,-0.2795 -0.252148,-0.4042 -0.08484,-0.2239 -0.12434,-1.8279 -0.04501,-1.8279 0.02251,0 0.914361,0.437 1.981883,0.9711 1.895453,0.9484 2.328374,1.2344 2.328374,1.5385 0,0.082 0.03626,0.1494 0.08058,0.1494 0.04432,0 0.08058,-0.049 0.08058,-0.11 0,-0.3055 0.424337,-0.585 2.352825,-1.5498 l 2.012033,-1.0067 -0.02698,0.9656 c -0.02623,0.9389 -0.03343,0.9724 -0.260131,1.2087 l -0.233153,0.2432 0.264928,0.3017 c 0.563027,0.6413 0.761494,1.5183 0.526505,2.3266 -0.148353,0.5103 -0.486575,1.0596 -0.80826,1.3126 -0.156966,0.1235 -0.201776,0.2325 -0.201776,0.4906 l 0,0.3319 0.562032,-0.283 c 0.309117,-0.1557 0.581066,-0.2831 0.604332,-0.2831 0.02327,0 0.0423,0.4551 0.0423,1.0113 0,0.7254 -0.033,1.075 -0.116751,1.237 -0.148239,0.2866005 -0.581887,0.6692005 -0.914988,0.8072005 -0.163076,0.067 -0.257503,0.1633 -0.257503,0.2612 0,0.2609 -0.302132,0.7644 -0.611719,1.0196 -0.325781,0.2686 -0.806299,0.4178 -1.345019,0.4178 -0.474475,0 -1.051736,0.1818 -1.38549,0.4364 -0.322951,0.2463 -0.314326,0.2449 -0.455198,0.074 z m 2.30674,-1.8642 c 2.345572,-1.1918005 2.37704,-1.2199005 2.37704,-2.1232005 0,-0.3037 -0.02719,-0.5526 -0.06043,-0.553 -0.03324,0 -0.981223,0.4604 -2.106633,1.0243 C 7.805618,10.13503 7.265518,10.44403 7.163495,10.61173 l -0.135586,0.223 -0.178572,-0.2415 c -0.13036,-0.1764 -0.721342,-0.5131 -2.188929,-1.2474005 -1.105695,-0.5532 -2.050857,-1.0058 -2.10036,-1.0058 -0.163331,0 -0.05429,1.166 0.133371,1.4262 0.112852,0.1565 0.77949,0.5395005 2.174236,1.2492005 1.106316,0.5629 2.065872,1.0234 2.132349,1.0234 0.06648,0 1.027364,-0.4605 2.135306,-1.0234 z M 7.269135,7.2670295 c 0.305952,-0.5221 0.33194,-0.7114 0.132459,-0.965 -0.30144,-0.3833 -0.88506,-0.1992 -0.88506,0.2791 0,0.2444 0.373127,1.0337 0.488616,1.0337 0.03306,0 0.151856,-0.1565 0.263985,-0.3478 z m -1.737088,-0.1802 c 0.558766,-0.2334 0.986665,-0.7851 1.107185,-1.4275 0.189481,-1.0101 -0.787678,-2.1539 -1.839977,-2.1539 -0.783444,0 -1.642244,0.6755 -1.824463,1.4351 -0.21102,0.8796 0.233365,1.7919 1.043836,2.143 0.368411,0.1596 1.13533,0.1612 1.513419,0 z m -0.949375,-0.333 c -0.742301,-0.2816 -0.582982,-1.3468 0.201444,-1.3468 0.831387,0 0.937182,1.1826 0.120866,1.3511 -0.110794,0.023 -0.255834,0.021 -0.32231,0 z m 5.467839,0.3028 c 0.425934,-0.2173 0.872027,-0.7389 0.982406,-1.1489 0.388805,-1.4439 -1.031588,-2.8011 -2.388995,-2.2827 -0.794986,0.3036 -1.236121,0.9288 -1.239265,1.7564 -0.0029,0.7624 0.340965,1.342 0.985439,1.661 0.453735,0.2246 1.234967,0.2313 1.660415,0.014 z m -1.087882,-0.3274 c -0.395637,-0.1597 -0.548865,-0.6839 -0.302657,-1.0354 0.186663,-0.2665 0.483382,-0.3583 0.80987,-0.2505 0.307956,0.1016 0.430952,0.2811 0.430952,0.6287 0,0.3505 -0.07225,0.4869 -0.328074,0.6192 -0.255672,0.1322 -0.360434,0.1387 -0.610091,0.038 z" />
                         </svg>
                     </a>
                 </div>
-                <div class="social-links-st">
-                    <a target="_blank" rel="noopener" title="Instagram" data-testid="SocialIcon"
-                        href="https://instagram.com/cypherpunkfairy" aria-label="Instagram"
-                        class="sc-eCssSg lbrsth sc-hBEYos dWjUC">
-                        <svg enable-background="new 0 0 24 24"
-                            viewBox="0 0 24 24" class="sc-gKsewC fwXqBO">
-                            <title data-testid="svgTitle" id="title_0.08475331039608669">
-                                Instagram
-                            </title>
+                <div class="social-links-icon">
+                    <a target="_blank" rel="noopener" title="Tumblr" href="https://solarpunks2.tumblr.com/"
+                        aria-label="Tumblr">
+                        <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid"
+                            width="20.906" height="32" viewBox="0 0 20.906 32">
                             <path
-                                d="M21.938,7.71a7.329,7.329,0,0,0-.456-2.394,4.615,4.615,0,0,0-1.1-1.694,4.61,4.61,0,0,0-1.7-1.1,7.318,7.318,0,0,0-2.393-.456C15.185,2.012,14.817,2,12,2s-3.185.012-4.29.062a7.329,7.329,0,0,0-2.394.456,4.615,4.615,0,0,0-1.694,1.1,4.61,4.61,0,0,0-1.1,1.7A7.318,7.318,0,0,0,2.062,7.71C2.012,8.814,2,9.182,2,12s.012,3.186.062,4.29a7.329,7.329,0,0,0,.456,2.394,4.615,4.615,0,0,0,1.1,1.694,4.61,4.61,0,0,0,1.7,1.1,7.318,7.318,0,0,0,2.393.456c1.1.05,1.472.062,4.29.062s3.186-.012,4.29-.062a7.329,7.329,0,0,0,2.394-.456,4.9,4.9,0,0,0,2.8-2.8,7.318,7.318,0,0,0,.456-2.393c.05-1.1.062-1.472.062-4.29S21.988,8.814,21.938,7.71Zm-1,8.534a6.351,6.351,0,0,1-.388,2.077,3.9,3.9,0,0,1-2.228,2.229,6.363,6.363,0,0,1-2.078.388C15.159,20.988,14.8,21,12,21s-3.159-.012-4.244-.062a6.351,6.351,0,0,1-2.077-.388,3.627,3.627,0,0,1-1.35-.879,3.631,3.631,0,0,1-.879-1.349,6.363,6.363,0,0,1-.388-2.078C3.012,15.159,3,14.8,3,12s.012-3.159.062-4.244A6.351,6.351,0,0,1,3.45,5.679a3.627,3.627,0,0,1,.879-1.35A3.631,3.631,0,0,1,5.678,3.45a6.363,6.363,0,0,1,2.078-.388C8.842,3.012,9.205,3,12,3s3.158.012,4.244.062a6.351,6.351,0,0,1,2.077.388,3.627,3.627,0,0,1,1.35.879,3.631,3.631,0,0,1,.879,1.349,6.363,6.363,0,0,1,.388,2.078C20.988,8.841,21,9.2,21,12S20.988,15.159,20.938,16.244Z">
-                            </path>
-                            <path d="M17.581,5.467a.953.953,0,1,0,.952.952A.954.954,0,0,0,17.581,5.467Z"></path>
-                            <path
-                                d="M12,7.073A4.927,4.927,0,1,0,16.927,12,4.932,4.932,0,0,0,12,7.073Zm0,8.854A3.927,3.927,0,1,1,15.927,12,3.932,3.932,0,0,1,12,15.927Z">
-                            </path>
+                                d="M12.593,32.000 C7.032,32.000 4.000,29.047 4.000,24.000 L4.000,15.000 L0.982,15.000 C0.432,15.000 -0.013,14.552 -0.013,14.000 L-0.013,7.969 C-0.013,7.669 0.121,7.384 0.354,7.194 C0.586,7.004 0.888,6.930 1.183,6.989 C1.204,6.993 1.334,7.012 1.528,7.012 C2.822,7.012 4.995,6.231 4.995,1.000 C4.995,0.448 5.440,0.000 5.990,0.000 L11.930,0.000 C12.480,0.000 12.926,0.448 12.926,1.000 L12.926,7.000 L18.897,7.000 C19.447,7.000 19.892,7.448 19.892,8.000 L19.892,14.000 C19.892,14.552 19.447,15.000 18.897,15.000 L12.926,15.000 L12.926,21.303 C12.926,22.998 13.715,22.998 14.138,22.998 C14.527,22.998 15.004,22.903 15.554,22.718 C15.672,22.678 15.831,22.605 16.020,22.520 C16.306,22.393 16.645,22.242 17.010,22.107 C17.501,21.921 18.059,22.161 18.268,22.650 L20.807,28.594 C20.997,29.037 20.844,29.552 20.445,29.820 C20.313,29.909 17.147,32.000 12.593,32.000 ZM1.978,13.000 L4.963,13.000 C5.513,13.000 5.959,13.448 5.959,14.000 L5.959,24.174 C5.959,28.149 8.067,30.000 12.593,30.000 C15.369,30.000 17.558,29.101 18.626,28.559 L16.828,24.348 C16.566,24.465 16.346,24.561 16.185,24.615 C15.432,24.869 14.743,24.998 14.138,24.998 C12.765,24.998 12.011,24.350 11.619,23.807 C11.165,23.178 11.000,22.032 11.000,21.000 L11.000,14.000 C11.000,13.448 11.380,13.000 11.930,13.000 L18.000,13.000 L18.000,9.000 L11.930,9.000 C11.380,9.000 10.935,8.552 10.935,8.000 L10.935,2.000 L6.958,2.000 C6.637,7.824 3.499,8.842 1.978,8.990 L1.978,13.000 Z" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="social-links-icon">
+                    <a target="_blank" rel="noopener" title="Letterbox" href="https://letterboxd.com/solarpunks2/"
+                        aria-label="Letterbox">
+                        <svg viewBox="0 0 500 500" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <defs>
+                                <rect id="path-1" x="0" y="0" width="129.847328" height="141.443299" />
+                                <rect id="path-3" x="0" y="0" width="129.847328" height="141.443299" />
+                            </defs>
+                            <g id="letterboxd-decal-dots-pos-mono" stroke="none" stroke-width="1" fill="none"
+                                fill-rule="evenodd">
+                                <circle id="Circle" fill="#202830" cx="250" cy="250" r="250" />
+                                <g id="Dots" transform="translate(61.000000, 180.000000)">
+                                    <ellipse id="Green" fill="#FFFFFF" cx="189" cy="70" rx="70.0786517" ry="70" />
+                                    <g id="Blue" transform="translate(248.152672, 0.000000)">
+                                        <mask id="mask-2" fill="white">
+                                            <use xlink:href="#path-1" />
+                                        </mask>
+                                        <g id="Mask" />
+                                        <ellipse fill="#FFFFFF" mask="url(#mask-2)" cx="59.7686766" cy="70"
+                                            rx="70.0786517" ry="70" />
+                                    </g>
+                                    <g id="Orange">
+                                        <mask id="mask-4" fill="white">
+                                            <use xlink:href="#path-3" />
+                                        </mask>
+                                        <g id="Mask" /> <!--!!!-->
+                                        <ellipse fill="#FFFFFF" mask="url(#mask-4)" cx="70.0786517" cy="70"
+                                            rx="70.0786517" ry="70" />
+                                    </g>
+                                    <path
+                                        d="M129.539326,107.063108 C122.810493,96.3149291 118.921348,83.611134 118.921348,70 C118.921348,56.388866 122.810493,43.6850709 129.539326,32.9368922 C136.268159,43.6850709 140.157303,56.388866 140.157303,70 C140.157303,83.611134 136.268159,96.3149291 129.539326,107.063108 L129.539326,107.063108 Z"
+                                        id="Overlap" fill="#202830" />
+                                    <path
+                                        d="M248.460674,32.9368922 C255.189507,43.6850709 259.078652,56.388866 259.078652,70 C259.078652,83.611134 255.189507,96.3149291 248.460674,107.063108 C241.731841,96.3149291 237.842697,83.611134 237.842697,70 C237.842697,56.388866 241.731841,43.6850709 248.460674,32.9368922 L248.460674,32.9368922 Z"
+                                        id="Overlap" fill="#202830" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+                <div class="social-links-icon">
+                    <a target="_blank" rel="noopener" title="Instagram" href="https://instagram.com/solarpunks2"
+                        aria-label="Instagram">
+                        <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" xml:space="preserve">
+                            <style type="text/css">
+                                .st0 {
+                                    fill: none;
+                                    stroke: #000000;
+                                    stroke-width: 2;
+                                    stroke-linecap: round;
+                                    stroke-linejoin: round;
+                                    stroke-miterlimit: 10;
+                                }
+
+                                .st1 {
+                                    fill: none;
+                                    stroke: #000000;
+                                    stroke-width: 2;
+                                }
+
+                                .st2 {
+                                    fill: none;
+                                    stroke: #000000;
+                                    stroke-width: 2;
+                                    stroke-miterlimit: 10;
+                                }
+                            </style>
+                            <path class="st0"
+                                d="M23,31H9c-4.4,0-8-3.6-8-8V9c0-4.4,3.6-8,8-8h14c4.4,0,8,3.6,8,8v14C31,27.4,27.4,31,23,31z" />
+                            <circle class="st0" cx="16" cy="16" r="7" />
+                            <circle class="st0" cx="24" cy="7" r="1" />
                         </svg>
                     </a>
                 </div>
             </div>
         </div>
-    </div>
+        <footer>
+            <p>Made with 🩵 & muita kombucha by <a id="author" href="https://github.com/solarpunks2"
+                    target="_blank">solarpunks2 :3</a></p>
+        </footer>
+    </main>
 </body>
 
 </html>
