--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         <div id="all">
             <div id="angel-name-mbti">
                 <img alt="" src="assets/ochan.jpeg">
-                <h3>
-                    ＠ｓｏｌａｒｐｕｎｋ　♡</h3>
-                <p>🌱 INFJ ~ IEI
-                </p>
+                <h3>＠ｓｏｌａｒｐｕｎｋ　♡</h3>
+                <p>🌱 INFJ: IEI ~ 4w3 ~ melSang</p>
             </div>
             <div id="social-links">
                 <div class="social-links-icon">
@@ -138,7 +136,7 @@
         </div>
         <footer>
             <p>Made with 🩵 & muita kombucha by <a id="author" href="https://github.com/solarpunks2"
-                    target="_blank">solarpunks2 :3</a></p>
+                    target="_blank">solarpunks2</a> :3</p>
         </footer>
     </main>
 </body>
