--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ｓｏｌａｒｐｕｎｋ ♡</title>
     <link rel="icon" type="image/x-icon" href="icon.com">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <div id="angel-name-mbti">
                 <img alt="" src="assets/ochan.jpeg">
                 <h3>＠ｓｏｌａｒｐｕｎｋ　♡</h3>
-                <p>🌱 INFJ: IEI ~ 4w3 ~ melSang</p>
+                <p>🌱 INFJ: IEI ~ 4w3 ~ sp/so ~ melSang</p>
             </div>
             <div id="social-links">
                 <div class="social-links-icon">
