--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ｓｏｌａｒｐｕｎｋ ♡</title>
+    <title>ｃｙｐｈｅｒｇｏｔｈｉｃ ♡</title>
     <link rel="icon" type="image/x-icon" href="icon.com">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,12 +17,12 @@
         <div id="all">
             <div id="angel-name-mbti">
                 <img alt="" src="assets/ochan.jpeg">
-                <h3>＠ｓｏｌａｒｐｕｎｋ　♡</h3>
-                <p>🌱 INFJ: IEI ~ 4w3 ~ sp/so ~ melSang</p>
+                <h3>＠ｃｙｐｈｅｒｇｏｔｈｉｃ ♡</h3>
+                <p>🌱 INFJ: IEI ~ 4w5 ~ sp/so ~ 417 ~ melSang</p>
             </div>
             <div id="social-links">
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Email" href="mailto:solarpunks2@email.com"
+                    <a target="_blank" rel="noopener" title="Email" href="mailto:cyphergothic@email.com"
                         aria-label="Email">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M4 7.00005L10.2 11.65C11.2667 12.45 12.7333 12.45 13.8 11.65L20 7" stroke="#000000"
@@ -37,7 +37,7 @@
                     </a>
                 </div>
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Skoob" href="https://www.skoob.com.br/perfil/solarpunks2"
+                    <a target="_blank" rel="noopener" title="Skoob" href="https://www.skoob.com.br/perfil/cyphergothic"
                         aria-label="Skoob">
                         <svg role="img" focusable="false" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 14 14">
@@ -47,7 +47,7 @@
                     </a>
                 </div>
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Tumblr" href="https://solarpunks2.tumblr.com/"
+                    <a target="_blank" rel="noopener" title="Tumblr" href="https://cyphergothic.tumblr.com/"
                         aria-label="Tumblr">
                         <svg fill="#000000" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid"
                             width="20.906" height="32" viewBox="0 0 20.906 32">
@@ -57,7 +57,7 @@
                     </a>
                 </div>
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Soundcloud" href="https://soundcloud.com/solarpunks2/" aria-label="Soundcloud">
+                    <a target="_blank" rel="noopener" title="Soundcloud" href="https://soundcloud.com/cyphergothic/" aria-label="Soundcloud">
                         <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" xml:space="preserve">
                             <style type="text/css">
                                 .st0{fill:none;stroke:#000000;stroke-width:2;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;}
@@ -74,7 +74,7 @@
                     </a>
                 </div>
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Letterbox" href="https://letterboxd.com/solarpunks2/"
+                    <a target="_blank" rel="noopener" title="Letterbox" href="https://letterboxd.com/cyphergothic/"
                         aria-label="Letterbox">
                         <svg viewBox="0 0 500 500" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -115,7 +115,7 @@
                     </a>
                 </div>
                 <div class="social-links-icon">
-                    <a target="_blank" rel="noopener" title="Instagram" href="https://instagram.com/solarpunks2"
+                    <a target="_blank" rel="noopener" title="Instagram" href="https://instagram.com/cyphergothic"
                         aria-label="Instagram">
                         <svg version="1.1" id="Icons" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 32 32" xml:space="preserve">
@@ -152,8 +152,8 @@
             </div>
         </div>
         <footer>
-            <p>Made with 🩵 & muita kombucha by <a id="author" href="https://github.com/solarpunks2"
-                    target="_blank">solarpunks2</a> :3</p>
+            <p>Made with 🩵 & muita kombucha by <a id="author" href="https://github.com/cyphergoth"
+                    target="_blank">cyphergothic</a> :3</p>
         </footer>
     </main>
 </body>
